css/style.css
*,
*::after,
*::before {
	margin: 0;
	padding: 0;
	box-sizing: inherit;
}

:root {
	/* Banner section */
	--banner-color: #262c37;
	--banner-text: #f5f5f5;

	/* Header section */
	--header-title: #242b39;
	--header-text: #999;

	/* Portfolio Main Section */
	--main-text: #777;
	--placeholder-color: #777;
	--horizontal-rule: #242b39;
	--input-color: #e6e6e6;
}

/* html {
	font-size: 10px;
} */

.nav-links {
	list-style: none;
}

body,
html {
	font-family: 'Lato', 'Lucida Sans', Geneva, Verdana, sans-serif;
	line-height: 1.2;
	font-weight: 400;
	overflow-x: hidden;
	hyphens: auto;
	height: 100vh;
	box-sizing: border-box;
	font-size: 10px;
}

/* h2 {
	font-size: 60px;
	font-weight: 500;
}

h3 {
	font-size: 32px;
}
h4 {
	font-size: 24px;
}
h5 {
	font-size: 18px;
}
h6 {
	font-size: 14px;
} */

.wrapper {
	padding: 0 1rem;
	max-width: 60rem;
	margin: 0 auto;
	font-size: 1.6rem;
}

/* ++++++++++++++++++++++++++++++++++  */
/*           Banner Section              */
/* ++++++++++++++++++++++++++++++++++  */

/* Banner  */
.banner {
	padding: 2rem;
	text-align: center;
	background-color: var(--banner-color);
}

.banner-text {
	text-transform: uppercase;
	font-weight: 400;
	font-size: 2rem;
	color: var(--banner-text);
}

/* Header  */
.header {
	text-align: center;
}
.header-title {
	font-weight: 900;
	color: var(--header-title);
	font-size: 2rem;
	letter-spacing: -.1px;
	margin: 2.5rem 0 1rem;
}

.header-text {
	color: var(--header-text);
	margin-bottom: 3.6rem;
	padding: 0 1.8rem;
	font-size: 1.6rem;
}

/* .back-color {
	background-color: #a4d6ff;
	margin: 0 5px;
	padding: 0px 2px 2px 2px;
	border-radius: 3px;
}
*/
/* .bottom {
	padding: 5px;
} */

/* Horizontal Rule  */

hr {
	background-color: var(--horizontal-rule);
	border: none;
	margin-left: 5px;
	margin-right: 5px;
}
.hr-thick {
	height: .36rem;
	margin-bottom: .15rem;
}
.hr-thin {
	height: .14rem;
	margin-bottom: 2rem;
}

.hr-thin--newsletter {
	margin-top: 3rem;
}

/* ++++++++++++++++++++++++++++++++++  */
/*    Contact Information Section      */
/* ++++++++++++++++++++++++++++++++++  */
.form-titles {
	font-weight: 900;
	font-size: 2rem;
	margin-bottom: 2rem;
	color: rgb(36, 43, 57);
}

.form-field {
	margin: 0;
}

/* Contact info (fullname, email,phone,city,zip)  */
.field-box {
	display: flex;
	flex-direction: column;

	/* flex-direction: row;
	justify-content: space-between; */
}

.cont-info--mrgbtm {
	margin-bottom: .9rem;
}

.cont-info {
	margin-bottom: .9rem;
	color: var(--main-text);
	text-align: start;
	width: 18rem;
}

.cont-info--mrgbtm {
	margin-top: .9rem;
}

.required::placeholder {
	color: #999;
	text-align: end;
	font-style: italic;
	margin-right: 1rem;
}

/* input Styling  */
.input {
	border: none;
	background-color: var(--input-color);
	border-radius: 3px;
	width: 100%;
	height: 5rem;
	border-color: #000;
}

.field-box--zip {
	display: inline-block;
	max-width: 15rem;
	padding: 1rem;
}

select {
	border: none;
	background-color: var(--input-color);
	color: #999;
	border-radius: 4px;
	width: 100%;
	height: 5rem;
	padding-left: .5rem;
}
option:not(:first-of-type) {
	color: black;
}

input:focus {
	background-color: #fff;
	opacity: .5;
}

/* ++++++++++++++++++++++++++++++++++  */
/*    Newsletter Section      */
/* ++++++++++++++++++++++++++++++++++  */

.newsletter-text {
	color: var(--main-text);
	margin-top: 2.3rem;
	margin-bottom: 1.1rem;
}

.radio-box {
	display: flex;
	flex-direction: row;
	gap: 0.8rem;
	font-size: 1.6rem;
	color: var(--main-text);
}

.marg-bottm {
	margin-bottom: 1rem;
}

textarea {
	display: block;
	margin-bottom: 2rem;
	letter-spacing: 1px;
	max-width: 100%;
	line-height: 1.5;
	border: none;
	background-color: var(--input-color);
	height: 8rem;
	width: 100%;
}

/* ++++++++++++++++++++++++++++++++++  */
/*          Button Section             */
/* ++++++++++++++++++++++++++++++++++  */
.btn {
	cursor: pointer;
	font-size: 2rem;
	font-weight: 400;
	color: #fff;
	background-color: #52bab3;
	border: none;
	width: 100%;
	height: 6rem;
}

.btn:hover {
	opacity: .75;
}

/* Dry Classes */
.corner {
	border-radius: .4rem;
}

/* ++++++++++++++++++++++++++++++++++  */
/*    Footer Section      */
/* ++++++++++++++++++++++++++++++++++  */

/* footer  */
.footer {
	text-align: center;
}

.footer-text {
	color: #999;
	font-size: 1.3rem;
	margin-top: 2.5rem;
	margin-bottom: 20rem;
	font-style: italic;
}

/* ++++++++++++++++++++++++++++++++++  */
/*    Media Query Section      */
/* ++++++++++++++++++++++++++++++++++  */

/* 768px //16px = 48 */
/* 960px //16px = 60 */
@media screen and (min-width: 48em) {
	.field-box {
		flex-direction: row;
		margin-bottom: 1rem;
		align-items: center;
		justify-content: flex-start;
		max-width: 100%;
	}
	.field-box--zip {
		display: inline-block;
		max-width: 20rem;
	}

	.cont-info--2 {
		max-width: 13.6rem;
	}
}

